<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/tv_order_client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Client"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_order_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_order_client"
        android:text="@string/quantity"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tv_order_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_order_quantity"
        android:text="@string/price"
        android:textSize="16sp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tv_order_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="16/10/2021"
        android:textSize="16sp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tv_order_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/tv_order_time"
        android:layout_marginTop="16dp"
        android:padding="5dp"
        android:background="@drawable/bg_reg_bottom"
        android:text="@string/description"
        android:textSize="16sp"
        android:textColor="@color/black" />

</RelativeLayout>